# helix

./: Cargo.toml  config.toml  theme.toml
book/src/: agent.md
helix-agent/: Cargo.toml
helix-agent/src/: abort.rs  agent.rs  context.rs  diff.rs  error.rs  lib.rs  message.rs  model.rs  providers.rs  tools.rs
helix-agent/src/providers/: openai.rs
helix-agent/src/tools/: bash.rs  edit_file.rs  find.rs  grep.rs  ls.rs  read_file.rs  write_file.rs
helix-core/src/: lib.rs  object.rs  snippets.rs
helix-loader/src/: lib.rs
helix-lsp/src/: client.rs
helix-term/: Cargo.toml
helix-term/src/: agent_context.rs  application.rs  commands.rs  config.rs  health.rs  lib.rs
helix-term/src/commands/: agent.rs  lsp.rs  typed.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: agent_output.rs  agent_panel.rs  completion.rs  editor.rs  explore.rs  mod.rs  picker.rs  prompt.rs  statusline.rs  terminal.rs
helix-term/tests/test/: commands.rs
helix-view/: Cargo.toml
helix-view/src/: clipboard.rs  document.rs  editor.rs  lib.rs  snippet.rs  terminal.rs
master/: 404.html  commands.html  configuration.html  from-vim.html  icons.html  index.html  install.html  keymap.html  lang-support.html  languages.html  print.html  remapping.html  searchindex.js  searchindex.json  themes.html  usage.html
master/guides/: adding_languages.html  indent.html  index.html  textobject.html
runtime/themes/: serika-dark.toml
