[package]
name = "helix-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
crossbeam-queue = { workspace = true }
futures-util = { workspace = true }
imara-diff = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
